UtahLiveDataTest/src/objects/Appropriation__c.object
<CustomObject>
    <description>This is for the funding block in USBE</description>
    <fields>
        <fullName>CodeFromFINET__c</fullName>
        <label>Code From FINET</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedInFINET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted In FINET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FiscalYearName__c</fullName>
        <formula>FiscalYear__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST: Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Appropriations</relationshipLabel>
        <relationshipName>Appropriations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PED Business Services</fullName>
                </value>
                <value>
                    <fullName>PED District Computer Services</fullName>
                </value>
                <value>
                    <fullName>PED Math Teacher Training</fullName>
                </value>
                <value>
                    <fullName>Teacher Salary Supplement</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Health Insurance Pool</fullName>
                </value>
                <value>
                    <fullName>PSC Alternative Fuel Vehicles</fullName>
                </value>
                <value>
                    <fullName>FIN 04 GO Refunding Bonds Series A</fullName>
                </value>
                <value>
                    <fullName>DAG needed for deprec</fullName>
                </value>
                <value>
                    <fullName>DHS Homebound Transportation</fullName>
                </value>
                <value>
                    <fullName>DHS USDC Miscellaneous Donation Fund</fullName>
                </value>
                <value>
                    <fullName>DHS USDC Workshop Fund</fullName>
                </value>
                <value>
                    <fullName>DHS State Hospital Gift Fund</fullName>
                </value>
                <value>
                    <fullName>DHS State Hospital Unit Fund</fullName>
                </value>
                <value>
                    <fullName>DHS State Developmental Center Land Fund</fullName>
                </value>
                <value>
                    <fullName>DOH Medicaid Expansion Fund</fullName>
                </value>
                <value>
                    <fullName>DOT Wire Estate Memorial</fullName>
                </value>
                <value>
                    <fullName>DWS Child Care Fund</fullName>
                </value>
                <value>
                    <fullName>DWS Refugee Services Fund</fullName>
                </value>
                <value>
                    <fullName>DNR Water Commissioner Fund</fullName>
                </value>
                <value>
                    <fullName>DNR Reclamation Fund</fullName>
                </value>
                <value>
                    <fullName>DAS Waste Tire Recycling</fullName>
                </value>
                <value>
                    <fullName>GED Utah Stem Foundation Fund</fullName>
                </value>
                <value>
                    <fullName>DBS Instruction</fullName>
                </value>
                <value>
                    <fullName>DBS Support Services</fullName>
                </value>
                <value>
                    <fullName>DBS Instruction-2009</fullName>
                </value>
                <value>
                    <fullName>DBS Appropriation Transfer</fullName>
                </value>
                <value>
                    <fullName>DBS Institutional Council</fullName>
                </value>
                <value>
                    <fullName>DBS needed for deprec</fullName>
                </value>
                <value>
                    <fullName>PED Charter School Finance Authority</fullName>
                </value>
                <value>
                    <fullName>RGT Board of Regents Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValueFromFINET__c</fullName>
        <label>APPR_NM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Appropriation</label>
    <nameField>
        <label>APPR_CD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appropriations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>